--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(LC_3_VM C)
 
 set(CMAKE_C_STANDARD 23)
 
-add_executable(LC_3_VM src/LD-3.c src/LC-3.h)
+add_executable(LC_3_VM src/LD-3.c src/LC-3.h src/constants.h src/utils.c src/utils.h)
